added transformers to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ torch
 beautifulsoup4
 pandas
 tqdm
+
+# pytorch-pretrained-transformers and relevant dependencies:
+sentencepiece
+sacremoses
+transformers
